--- a/Contractor.html
+++ b/Contractor.html
@@ -15,21 +15,21 @@
 <body>
     <!-- -------------------------navbar---------------------------------- -->
     <nav class="navbar navbar-expand-lg" style="margin: 30px;">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="index.html"><img src="./images/header-logo.png" class="header_logo" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="./HomeOwner.html">HOMEOWNERS</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="./Contractor.html">CONTRACTORS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT</a>
+                    <a class="nav-link" href="./about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Contact.html">CONTACT</a>
@@ -38,7 +38,6 @@
         </div>
     </nav>
     <!-- -------------------------navbar---------------------------------- -->
-
     <!-- --------------------------section 1----------------------------- -->
     <div class="container-fluid">
         <div class="row">
@@ -54,7 +53,9 @@
                 </div>
 
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6" style="padding: 0;">
+                <img src="./images/contractor_section1.jpg" />
+            </div>
         </div>
     </div>
     <!-- -----------------------------section2-------------------------------- -->
@@ -67,6 +68,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="stand_row">
+                        <img src="./images/quality.png" />
                         <h2>FIND HIGH QUALITY <br /> CUSTOMERS </h2>
                         <p> <strong> We educate homeowners </strong>
                             on equipment costs and
@@ -75,6 +77,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="stand_row">
+                        <img src="./images/size.png" />
                         <h2>SIZE THE RIGHT <br /> SYSTEM </h2>
                         <p>Verify the <strong> highest efficiency, </strong>
                             best system for your customers</p>
@@ -82,6 +85,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="stand_row">
+                        <img src="./images/benefits.png" />
                         <h2>OFFER <br /> BENEFITS</h2>
                         <p> <strong> Offload </strong> time-consuming
                             <strong> incentive paperwork </strong>
@@ -96,7 +100,9 @@
     <!-- --------------------------section 3----------------------------- -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6"></div>
+            <div class="col-md-6 p-0">
+                <img src="./images/contractor_lastSection.jpg" />
+            </div>
             <div class="col-md-6 contractor_section3">
                 <h1> Work with us </h1>
 
@@ -120,6 +126,7 @@
     <!-- ---------------------------------footer---------------------------------- -->
     <footer>
         <div>
+            <img src="./images/footer_logo.png" alt="footer" />
             <p>© 2022 by Conduit Tech</p>
         </div>
 
