--- a/HomeOwner.html
+++ b/HomeOwner.html
@@ -17,21 +17,21 @@
 
     <!-- -------------------------navbar---------------------------------- -->
     <nav class="navbar navbar-expand-lg" style="margin: 30px;">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="index.html"><img src="./images/header-logo.png" class="header_logo" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="./HomeOwner.html">HOMEOWNERS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Contractor.html">CONTRACTORS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT</a>
+                    <a class="nav-link" href="./about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./Contact.html">CONTACT</a>
@@ -42,7 +42,7 @@
     <!-- -------------------------navbar---------------------------------- -->
 
     <!-- --------------------------section 1----------------------------- -->
-    <div class="container-fluid">
+    <div class="container-fluid" style="overflow: hidden;">
         <div class="row">
             <div class="col-md-6 home_section1">
                 <h1> Find the best HVAC </h1>
@@ -52,19 +52,23 @@
                 <p>Save money, improve your health, enhance comfort. <br />
                     Lower your monthly utility bill and eliminate harmful <br />
                     natural-gas fumes through electrification.</p>
-                <div>
+                <div class="home_section1_btn_div">
                     <button class="home_btn">Learn more</button>
                 </div>
 
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                <img src="./images/home_section1.jpg" />
+            </div>
         </div>
     </div>
     <!-- -----------------------------section 2 --------------------------  -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8"></div>
-            <div class="col-md-4 home_section2">
+    <div class="container-fluid home_main">
+        <div class="row home_section2_row">
+            <div class="col-md-7">
+                <img src="./images/home_section2.png" />
+            </div>
+            <div class="col-md-5 home_section2">
                 <h1> Title here </h1>
                 <div class="head_line"></div>
                 <h5>
@@ -90,6 +94,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="process_row">
+                        <img src="./images/cosultation.png" />
                         <h2>FREE <br /> CONSULTATION</h2>
                         <p>Determine what appliances
                             make sense for your home to
@@ -100,6 +105,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="process_row">
+                        <img src="./images/contractor.png" />
                         <h2>CONNECT WITH <br /> CONTRACTORS</h2>
                         <p>Our vetted contractors will
                             <strong> understand your home </strong>
@@ -109,25 +115,27 @@
                 </div>
                 <div class="col-md-3">
                     <div class="process_row">
-                        <h2>ESTIMATE & <br /> INSTALL</h2>
+                        <img src="./images/estimate.png" />
+                        <h2>ESTIMATE & <br /> install</h2>
                         <p> <strong> Install the right equipment
-                            for your home. </strong> Maximize
+                                for your home. </strong> Maximize
                             capture of state and local
                             funding available for energy
                             efficiency – <strong> saving money
-                            now, </strong> and on every energy bill
+                                now, </strong> and on every energy bill
                         </p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="process_row">
+                        <img src="./images/monitor.png" />
                         <h2>MONITOR YOUR <br /> SAVINGS & SYSTEM </h2>
                         <p> Work with your contractor to
                             <strong> find the right maintenance
-                            plan </strong> to keep your equipment
+                                plan </strong> to keep your equipment
                             running well. Take advantage
                             of <strong> Conduit Contractors’
-                            smart monitoring package. </strong>
+                                smart monitoring package. </strong>
                         </p>
                     </div>
                 </div>
@@ -140,11 +148,20 @@
         <h1>Estimate your Annual Savings, by state</h1>
         <div class="head_line2"></div>
 
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="./images/home_map3.png" />
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <!-- ---------------------------------footer---------------------------------- -->
     <footer>
         <div>
+            <img src="./images/footer_logo.png" alt="footer" />
             <p>© 2022 by Conduit Tech</p>
         </div>
 
