--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
         <!-- -------------------------navbar---------------------------------- -->
         <nav class="navbar navbar-expand-lg" style="margin: 30px;">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="index.html"><img src="./images/header-logo.png" class="header_logo" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./Contractor.html">CONTRACTORS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ABOUT</a>
+                        <a class="nav-link" href="./about.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">CONTACT</a>
@@ -42,7 +42,7 @@
 
         <!-- ------------------------------main section --------------------------  -->
 
-        <div class="container-fluid" style="padding: 0 30px;">
+        <div class="container-fluid index_main_section">
             <div class="row">
                 <div class="col-md-7 section1_text">
                     <h1>Future Proof </h1>
@@ -53,15 +53,13 @@
                     <p>Get started!</p>
 
                     <div>
-                        <button class="home_btn">Homeowner</button>
-                        <button class="contractor_btn">Contractor</button>
+                        <button class="home_btn"> <a href="./HomeOwner.html"> Homeowner </a> </button>
+                        <button class="contractor_btn"><a href="./HomeOwner.html"> Contractor </a> </button>
                     </div>
 
                 </div>
                 <div class="col-md-5"></div>
-
             </div>
-
         </div>
         <!-- ------------------------------main section --------------------------  -->
 
