--- a/Contact.html
+++ b/Contact.html
@@ -12,33 +12,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body oncontextmenu="return false">
 
-   <!-- -------------------------navbar---------------------------------- -->
-   <nav class="navbar navbar-expand-lg" style="margin: 30px;">
-    <a class="navbar-brand" href="index.html"><img src="./images/header-logo.png" class="header_logo" /></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="./HomeOwner.html">HOMEOWNERS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./Contractor.html">CONTRACTORS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./about.html">ABOUT</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="./Contact.html">CONTACT</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-<!-- -------------------------navbar---------------------------------- -->
+    <!-- -------------------------navbar---------------------------------- -->
+    <nav class="navbar navbar-expand-lg" style="margin: 30px;">
+        <a class="navbar-brand" href="index.html"><img src="./images/header-logo.png" class="header_logo" /></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"><i class="fa-solid fa-bars"></i></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="./HomeOwner.html">HOMEOWNERS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./Contractor.html">CONTRACTORS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./about.html">ABOUT</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="./Contact.html">CONTACT</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- -------------------------navbar---------------------------------- -->
 
     <!-- --------------------------section 1----------------------------- -->
     <div class="container-fluid">
@@ -128,7 +128,7 @@
         <div class="text-center">
             <img src="./images/heat_pump_img.png" />
         </div>
-        
+
     </div>
 
     <!-- ----------------------------------section5----------------------------- -->
@@ -159,7 +159,7 @@
                     pressurized, which raises the temperature. As the
                     refrigerant is pumped into the home, it warms the home
                     until heat is extracted and it condenses back into a liquid,
-                    and the cycle continues.  </p>
+                    and the cycle continues. </p>
             </div>
         </div>
     </div>
@@ -196,6 +196,27 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
         integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
         crossorigin="anonymous"></script>
+
+
+    <script>
+        document.onkeydown = function (e) {
+            if (event.keyCode == 123) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+                return false;
+            }
+            if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+                return false;
+            }
+        }
+    </script>
 </body>
 
 </html>
