--- a/HomeOwner.html
+++ b/HomeOwner.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-
-<body oncontextmenu="return false">
+<!-- oncontextmenu="return false" -->
+<body>
 
     <!-- -------------------------navbar---------------------------------- -->
     <nav class="navbar navbar-expand-lg" style="margin: 30px;">
@@ -148,12 +148,8 @@
         <h1>Estimate your Annual Savings, by state</h1>
         <div class="head_line2"></div>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-12">
-                    <img src="./images/home_map3.png" />
-                </div>
-            </div>
+        <div class="container-fluid estimate_img_div">
+            <img src="./images/home_map3.png" />
         </div>
 
     </div>
