--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     </head>
-
-    <body oncontextmenu="return false">
+    <!-- oncontextmenu="return false" -->
+    <body >
 
         <!-- -------------------------navbar---------------------------------- -->
         <nav class="navbar navbar-expand-lg" style="margin: 30px;">
@@ -54,7 +54,7 @@
 
                     <div>
                         <button class="home_btn"> <a href="./HomeOwner.html"> Homeowner </a> </button>
-                        <button class="contractor_btn"><a href="./HomeOwner.html"> Contractor </a> </button>
+                        <button class="contractor_btn"><a href="./Contractor.html"> Contractor </a> </button>
                     </div>
 
                 </div>
