--- a/Contractor.html
+++ b/Contractor.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<!-- oncontextmenu="return false" -->
-<body >
+
+<body oncontextmenu="return false">
     <!-- -------------------------navbar---------------------------------- -->
     <nav class="navbar navbar-expand-lg" style="margin: 30px;">
         <a class="navbar-brand" href="index.html"><img src="./images/header-logo.png" class="header_logo" /></a>
