--- a/Contact.html
+++ b/Contact.html
@@ -67,7 +67,7 @@
 
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-md-7 contact2_img">
                     <img src="./images/contact_section2.png" />
                 </div>
