--- a/HomeOwner.html
+++ b/HomeOwner.html
@@ -57,7 +57,7 @@
                 </div>
 
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 p-0">
                 <img src="./images/home_section1.jpg" />
             </div>
         </div>
@@ -92,7 +92,7 @@
 
         <div class="container-fluid my-5">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 p-0">
                     <div class="process_row">
                         <img src="./images/cosultation.png" />
                         <h2>FREE <br /> CONSULTATION</h2>
@@ -103,7 +103,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 p-0">
                     <div class="process_row">
                         <img src="./images/contractor.png" />
                         <h2>CONNECT WITH <br /> CONTRACTORS</h2>
@@ -113,7 +113,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 p-0">
                     <div class="process_row">
                         <img src="./images/estimate.png" />
                         <h2>ESTIMATE & <br /> install</h2>
@@ -126,7 +126,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 p-0">
                     <div class="process_row">
                         <img src="./images/monitor.png" />
                         <h2>MONITOR YOUR <br /> SAVINGS & SYSTEM </h2>
