--- a/Contractor.html
+++ b/Contractor.html
@@ -32,12 +32,16 @@
                     <a class="nav-link" href="./about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Contact.html">CONTACT</a>
+                    <a class="nav-link" href="./Pump.html">HEAT PUMP</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" name="contact_section" href="./about.html#contact_section">CONTACT</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- -------------------------navbar---------------------------------- -->
+
     <!-- --------------------------section 1----------------------------- -->
     <div class="container-fluid">
         <div class="row">
