--- a/Pump.html
+++ b/Pump.html
@@ -33,7 +33,10 @@
                     <a class="nav-link" href="./about.html">ABOUT</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="./Contact.html">CONTACT</a>
+                    <a class="nav-link" href="./Pump.html">HEAT PUMP</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./about.html#contact_section">CONTACT</a>
                 </li>
             </ul>
         </div>
