--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
 </head>
 
 <body oncontextmenu="return false">
+
     <!-- -------------------------navbar---------------------------------- -->
     <nav class="navbar navbar-expand-lg" style="margin: 30px;">
         <a class="navbar-brand" href="index.html"><img src="./images/header-logo.png" class="header_logo" /></a>
@@ -32,12 +33,16 @@
                     <a class="nav-link" href="./about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Contact.html">CONTACT</a>
+                    <a class="nav-link" href="./Pump.html">HEAT PUMP</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" name="contact_section" href="./about.html#contact_section">CONTACT</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- -------------------------navbar---------------------------------- -->
+
 
 
     <!-- --------------------------section 1----------------------------- -->
@@ -90,7 +95,7 @@
 
     <!-- ------------------------------------section3------------------------------- -->
 
-    <div class="stay_connected_div">
+    <div class="stay_connected_div" id="contact_section" name="contact_section">
         <h1>Let’s stay connected </h1>
 
         <div class="white_head_line"></div>
